# master_pom

./: CMakeLists.txt  CMakeSettings.json  README.md
experiment/cell_warping/: index.html
experiment/first_triangulation/: triangulation.cpp
experiment/shaders/: radial_cos.glsl  sphere.glsl  sphere_on_plane.glsl
experiment/shaders/util/: rotations3.glsl  signed_distance.glsl
lib/: CMakeLists.txt
lib/declarative/example/: CMakeLists.txt  fract.cpp
lib/declarative/src/: decl.hpp
lib/declarative/src/decl/make/: make.hpp
lib/declarative/src/decl/storage/: bound_storage.hpp  bound_storage_bindings.hpp
lib/declarative/src/decl/type_list/: at.hpp  index.hpp
pom/: CMakeLists.txt  sandbox.cpp  sandbox_qt.cpp
pom/ctree/: addition_op.hpp  all.hpp  blending_op.hpp  ctree.hpp  disc_prim.hpp  modulation_op.hpp  point.hpp  replacement_op.hpp  warping_op.hpp
pom/declarative/: all.hpp  context.hpp  data.hpp  dependencies.hpp  make_all.hpp
pom/declarative/detail/: make_and_store.hpp  make_sequence.hpp
pom/io/file_format/srtm/: srtm.hpp
pom/io/format/ply/: all.hpp
pom/io/format/wavefront/: all.hpp
pom/io/format/wavefront/concept/: all.hpp  obj.hpp  obj_f.hpp  obj_v.hpp  obj_vt.hpp
pom/io/format/wavefront/exception/: exception.hpp  not_implemented.hpp  precondition_violation.hpp
pom/io/std/: all.hpp  open.hpp  read.hpp  size.hpp
pom/io/wavefront/: all.hpp  input_stream.hpp  obj.hpp  obj_f.hpp  obj_v.hpp  obj_vt.hpp
pom/io_format/srtm/: all.hpp
pom/io_format/wavefront/: all.hpp  input_stream.hpp  obj.hpp
pom/io_qt/: CMakeLists.txt  all.hpp
pom/io_std/: open.hpp  read.hpp
pom/maths/: CMakeLists.txt  arity.hpp  exceptions.hpp  fract.hpp  gradient.hpp  interpolation.hpp  noise.hpp  numeric.hpp  sandbox.cpp
pom/maths/annotation/: dimension.hpp
pom/maths/collection/map/: vector.hpp
pom/maths/collection/reduce/: vector.hpp
pom/maths/detail/: hypercube.hpp
pom/maths/exception/: exception.hpp  invariant_violation.hpp  precondition_violation.hpp
pom/maths/function/: fract.hpp  hash.hpp  interpolation.hpp  noise.hpp
pom/maths/function/collection/map/: vector.hpp
pom/maths/function/collection/reduce/: vector.hpp
pom/maths/function/interpolation/: matrix.hpp
pom/maths/function/map/: vector.hpp
pom/maths/function/vector/: all.hpp  throw.hpp
pom/maths/interval/: all.hpp  concepts.hpp  length.hpp  map.hpp
pom/maths/matrix/: all.hpp  col_row.hpp  col_row_indexes.hpp  concepts.hpp  interpolation.hpp  map.hpp  matrix.hpp  ranges.hpp
pom/maths/matrix/traits/: dynamic.hpp  matrix.hpp  static.hpp
pom/maths/meta/: arity.hpp
pom/maths/numeric/: all.hpp  floor.hpp  fract.hpp
pom/maths/object/: interval.hpp  matrix.hpp  vector.hpp
pom/maths/operation/: all.hpp  clamp.hpp  fract.hpp  interpolation.hpp
pom/maths/operation/noise/: hashes.hpp  perlin.hpp
pom/maths/preset/default/: all.hpp  interval.hpp  static_vector.hpp
pom/maths/vector/: all.hpp  concepts.hpp  map.hpp  numeric.hpp  operators.hpp  ranges.hpp  reduce.hpp  tests.cpp  vector.hpp
pom/maths/vector/operation/: all.hpp  floor.hpp  quotient.hpp  sum.hpp
pom/maths/vector_to_remove/: operators.hpp
pom/maths_impl/: all.hpp  dynamic_matrix.hpp  interval.hpp  matrix.hpp  matrix_col_row.hpp  matrix_col_row_indexes.hpp  matrix_view.hpp  static_vector.hpp  vector.hpp  vector_view.hpp
pom/maths_impl/noise/: perlin.hpp
pom/meta/exception/: exception.hpp
pom/meta/tag/: all.hpp
pom/meta/type_list/: size.hpp
pom/qt/: CMakeLists.txt
pom/sandbox/: CMakeLists.txt  coloration.cpp  declarative.cpp  erosion.cpp  gradients.cpp  heightfield.cpp  maths.cpp  terrain.cpp  texture.cpp
pom/terrain/: all.hpp  context.hpp  defaults.hpp  examples.hpp  heightfield.hpp  heightfield_to_obj.hpp  imports.hpp  paths.hpp  tesselation.hpp  wavefront.hpp
pom/terrain/coloration/: all.hpp
pom/terrain/effect/: erosion.hpp  orange_peel.hpp  snow.hpp
pom/terrain/function/: all.hpp
pom/terrain/function/addition/: addition_operator.hpp
pom/terrain/function/concept/: all.hpp  first_order_function.hpp  function.hpp  higher_order_function.hpp
pom/terrain/function/lerp/: lerp.hpp
pom/terrain/function/multiplication/: multiplication_operator.hpp
pom/terrain/function/product/: product.hpp
pom/terrain/function/smooth_max/: smax.hpp
pom/terrain/function/sum/: all.hpp  sum.hpp  sum_of.hpp
pom/terrain/function/translation/: translation.hpp
pom/terrain/function/worley/: all.hpp
pom/terrain/import/: all.hpp
pom/terrain/import/noise/: gradient_noise.hpp
pom/terrain/import/vec/: vec.hpp  xyz.hpp
pom/terrain/landform/: all.hpp  canyons_0.hpp  dunes_0.hpp  islands_0.hpp  mountains_0.hpp  plains_0.hpp  randoms_0.hpp  test_0.hpp
pom/terrain/material/: monochrome.hpp
pom/terrain/noise/: worley.hpp
pom/terrain/operator/: all.hpp  amplification.hpp  billowed.hpp  distortion.hpp  scaling.hpp  sum.hpp  warped.hpp
pom/terrain/operator/amplification/: amplification.hpp  amplified.hpp
pom/terrain/operator/color/: color.hpp  colored.hpp
pom/terrain/operator/composition/: composed.hpp
pom/terrain/operator/lerp/: lerp.hpp  lerped.hpp
pom/terrain/operator/maximum/: max.hpp  maximized.hpp
pom/terrain/operator/minimum/: min.hpp  minimized.hpp
pom/terrain/operator/offset/: offset.hpp  offsetted.hpp
pom/terrain/operator/scaled/: scaled.hpp
pom/terrain/operator/scaling/: scaled.hpp  scaling.hpp
pom/terrain/operator/smooth_minimum/: smin.hpp  smoothly_minimized.hpp
pom/terrain/operator/sum/: sum.hpp
pom/terrain/operator/translation/: translated.hpp  translation.hpp
pom/terrain/operator_d/worley_warping/: worley_warping.hpp
pom/terrain/primitive/: all.hpp  directional_waves.hpp  sphere.hpp
pom/terrain/tag/: all.hpp  color.hpp  height.hpp  normal.hpp
pom/terrain/test/: all.hpp  min_noise.hpp  snowy_sphere.hpp
pom/terrain/warping/: noise_warping.hpp
production/rendering/: setup.blend  setup.blend1
production/report/: Jornadas.cls  main.tex
wiki/: experiments.md  resources.md  terrain.md
